Updated Apache Spark Tuning and Debugging (markdown)